--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/vuelidate": "^0.7.13",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "oauth2-popup-flow": "^1.1.0",
     "quasar": "^1.0.0",
     "vue-class-component": "^7.2.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "@types/node": "^10.17.15",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
