--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@morioh/v-smooth-scrollbar": "^1.0.3",
     "@quasar/extras": "^1.0.0",
     "@types/vuelidate": "^0.7.13",
     "axios": "^0.21.1",
@@ -17,8 +18,10 @@
     "dotenv": "^8.2.0",
     "oauth2-popup-flow": "^1.1.0",
     "quasar": "^1.0.0",
+    "smooth-scrollbar": "^8.5.3",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
+    "vue-smooth-scrollbar": "^0.1.2",
     "vuelidate": "^0.7.6",
     "vuelidate-property-decorators": "^1.0.28"
   },
